--- a/DOTest/app/src/main/AndroidManifest.xml
+++ b/DOTest/app/src/main/AndroidManifest.xml
@@ -26,12 +26,12 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:windowSoftInputMode="stateHidden|stateUnchanged">
+            android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
             android:name=".ui.icon.IconActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:windowSoftInputMode="stateHidden|stateUnchanged">
+            android:windowSoftInputMode="stateHidden">
         </activity>
     </application>
 </manifest>
